fixes mobile nav wrapping

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -513,10 +513,10 @@ ul.nav-social-list
   background #efefef
 
 .nav-footer-list
-  display flex
   padding padding-content
   li
     margin 0
+    display inline
 
 /*li*/.nav-footer-item a
   font-size 1.2rem
@@ -525,6 +525,7 @@ ul.nav-social-list
   padding-right padding-content
   text-align left
   text-decoration none
+  white-space nowrap
 
   &:hover
     color color-black
